[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/SimSlider.gd" type="Script" id=1]
[ext_resource path="res://ui/reset.png" type="Texture" id=2]

[node name="SimSlider" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -333.0
margin_bottom = -618.0
script = ExtResource( 1 )
max_value = 0.0
step = 0.0

[node name="Label" type="Label" parent="."]
margin_top = 5.0
margin_right = 65.0
margin_bottom = 19.0
rect_min_size = Vector2( 65, 0 )
text = "SimSlider:"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 69.0
margin_right = 357.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 0.0
step = 0.0
ticks_on_borders = true

[node name="SpinBox" type="SpinBox" parent="."]
margin_left = 361.0
margin_right = 435.0
margin_bottom = 24.0
max_value = 0.0
step = 0.0

[node name="ResetButton" type="Button" parent="."]
margin_left = 439.0
margin_right = 467.0
margin_bottom = 24.0
hint_tooltip = "Reset to default"
disabled = true
icon = ExtResource( 2 )
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
